fixed content shift when scrolling appears

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -27,9 +27,19 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-
 }
+@media (min-width: 1024px) {
+  .aboutContent {
+    padding-left: calc(100vw - 100% + 15px);
+  }
+  .about {
+    overflow-x: hidden;
+    box-sizing: content-box;
+  }
+}
+
 
 .buildHash {
   text-align: center;
 }
+
